--- a/login.html
+++ b/login.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <h2>Iniciar sesión</h2>
-    <form action="/ruta_del_servidor" method="POST">
+    <form action="validar.php" method="POST">
         <label for="username">Usuario:</label><br>
         <input type="text" id="username" name="username" required><br><br>
 
         <label for="password">Contraseña:</label><br>
         <input type="password" id="password" name="password" required><br><br>
 
-        <button type="submit">Iniciar sesión</button>
+        <button type="submit">Ingresar</button>
     </form>
 </body>
 </html>
